@@ -39,7 +39,6 @@ class AutomaticTest(_SSIPClientTest):
     VoiceTest below.
 
     """
-    
     def test_callbacks(self):
         # TODO: This needs to be fixed. There is no guarantee that
         # the message will start in one second nor is there any
@@ -116,6 +115,18 @@ class VoiceTest(_SSIPClientTest):
         c.char("a")
         c.key("shift_b")
         c.sound_icon("empty")
+        
+    def test_lists(self):
+        c = self._client
+        for module in  c.list_output_modules():
+            c.set_output_module(module)
+            #print "**", module
+            c.speak(module +"using default voice")
+            #for name, lang, dialect in c.list_synthesis_voices():
+            #    print " -", module, name, lang, dialect
+            #    c.set_synthesis_voice(name)
+            #    c.speak(module +" using voice "+ name)
+        
 
 
 if __name__ == '__main__':
