@@ -1,3 +1,11 @@
+2007-06-26  Tomas Cerha  <cerha@brailcom.org>
+
+	* speechd/_test.py (VoiceTest.test_lists): New test.
+
+	* speechd/client.py (SSIPClient.list_output_modules)
+	(SSIPClient.list_synthesis_voices, SSIPClient.set_output_module)
+	(SSIPClient.set_synthesis_voice): New methods.
+
 2007-05-03  Hynek Hanke  <hanke@brailcom.org>
 
 	* Makefile (clean): Remove build.
